--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "redirects": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
